# src/main/java/com/hunty/chatintegrationcore/chats/adapter/in/web/exception/ControllerAdvisor.java
@@ -1,0 +1,38 @@
+package com.hunty.chatintegrationcore.chats.adapter.in.web.exception;
+
+import jakarta.ws.rs.BadRequestException;
+import java.time.LocalDateTime;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+@ControllerAdvice
+public class ControllerAdvisor extends ResponseEntityExceptionHandler {
+
+  @ExceptionHandler(NoDataFoundException.class)
+  public ResponseEntity<Object> handleNoDataFoundException(
+      NoDataFoundException ex, WebRequest request) {
+
+    Map<String, Object> body = new LinkedHashMap<>();
+    body.put("timestamp", LocalDateTime.now());
+    body.put("message", "No rules found");
+
+    return new ResponseEntity<>(body, HttpStatus.NOT_FOUND);
+  }
+
+  @ExceptionHandler(BadRequestException.class)
+  public ResponseEntity<Object> handleBadRequestException(
+          NoDataFoundException ex, WebRequest request) {
+
+    Map<String, Object> body = new LinkedHashMap<>();
+    body.put("timestamp", LocalDateTime.now());
+    body.put("message", "Faltan datos obligatorios");
+
+    return new ResponseEntity<>(body, HttpStatus.NOT_FOUND);
+  }
+}
